Changed padding of current temp b/c it was overlapping with the icon. Fixed current day only working with months that started on Sunday. Now current day is set while the calendar is being generated and not after-the-fact.

--- a/page/static/page/style.css
+++ b/page/static/page/style.css
@@ -117,7 +117,7 @@ body {
     text-align:center;
     height: 10%;
     font-size: 40pt;
-    margin-top: -15%;
+    margin-top: -10%;
 }
 
 
